Bug 50654 - Writer, Ruler: Paint issue at bottom left-ruler
Summary: Writer, Ruler: Paint issue at bottom left-ruler
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
3.3.4 release
Hardware: Other All
: medium normal
Assignee: Ivan Timofeev (retired)
URL:
Whiteboard: target:3.7.0 target:3.6.1 target:3.5.7
Keywords:
: 49310 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-06-03 13:53 UTC by Thomas Arnhold
Modified: 2012-08-13 10:28 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Top of the left ruler - ok (39.24 KB, image/png)
2012-06-03 13:53 UTC, Thomas Arnhold
Details
Bottom of the left ruler with issue (43.59 KB, image/png)
2012-06-03 13:54 UTC, Thomas Arnhold
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas Arnhold 2012-06-03 13:53:50 UTC
Created attachment 62472 [details]
Top of the left ruler - ok

With the new light-weight ruler the bottom of the left ruler has a little paint issue.

Steps to reproduce:

1. Open a new writer document
2. Scroll down to the bottom and look at the left ruler

This error only occurs, if the window doesn't get resized. If you resize the window (vertically) the ruler will get paint right.

Specs: Linux, master (27cd9157ac0e824197aa40c67fe6a4bfab3b2e38)
Comment 1 Thomas Arnhold 2012-06-03 13:54:13 UTC
Created attachment 62473 [details]
Bottom of the left ruler with issue
Comment 2 Rainer Bielefeld Retired 2012-06-03 21:54:22 UTC
NOT reproducible with "LibreOffice 3.5.4.2  German UI/Locale [Build-ID: 165a79a-7059095-e13bb37-fef39a4-9503d18] on German WIN7 Home Premium (64bit).

NOT reproducible with parallel installation of Master "LOdev 3.6.0alpha0+  – WIN7 Home Premium (64bit) ENGLISH UI [Build ID: 5b81e2d]" (tinderbox: W2008R2@20-With-Symbol-Bytemark-Hosting, pull time 2012-05-23 22:18:38)

Linux specific?

@Thomas Arnhold:
Please add some info concerning your LibO version. Pull time (in file name), Build ID in Help/about?
Comment 3 Thomas Arnhold 2012-06-04 06:33:36 UTC
Yes, it's Linux specific, therefore I had chosen platform Linux.

Libo: version 3.6.0alpha1+ (Build ID: 98e2ca5)
Git ID: 27cd9157ac0e824197aa40c67fe6a4bfab3b2e38
Comment 4 Ivan Timofeev (retired) 2012-08-07 19:19:39 UTC
Looks like a bug in the ruler code itself... Taking this bug, probably I know how to fix it.
Comment 5 Ivan Timofeev (retired) 2012-08-07 19:21:04 UTC
*** Bug 49310 has been marked as a duplicate of this bug. ***
Comment 6 Ivan Timofeev (retired) 2012-08-07 19:29:22 UTC
I have just reproduced on Windows with 3.5.2 :\
Comment 7 Not Assigned 2012-08-08 13:30:11 UTC
Ivan Timofeev committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=84d5e639b08a1f96b41b7b5b6af51c703b0cd620

fdo#50654: update virtual device width on modifying WB_EXTRAFIELD flag
Comment 8 Ivan Timofeev (retired) 2012-08-08 18:45:34 UTC
(In reply to comment #6)
> I have just reproduced on Windows with 3.5.2 :\

It is broken even in 3.3.4
Comment 9 Not Assigned 2012-08-13 10:16:47 UTC
Ivan Timofeev committed a patch related to this issue.
It has been pushed to "libreoffice-3-6":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=6f86c8e38a5263e609ec189b2a01d4fad7cd0e4e&g=libreoffice-3-6

fdo#50654: update virtual device width on modifying WB_EXTRAFIELD flag


It will be available in LibreOffice 3.6.1.
Comment 10 Not Assigned 2012-08-13 10:28:55 UTC
Ivan Timofeev committed a patch related to this issue.
It has been pushed to "libreoffice-3-5":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=1500bc8970dc61f96697a186d6bb0d1aacc2ce67&g=libreoffice-3-5

fdo#50654: update virtual device width on modifying WB_EXTRAFIELD flag


It will be available in LibreOffice 3.5.7.