fdo#50654: update virtual device width on modifying WB_EXTRAFIELD flag

Writer sets this flag dynamically via Ruler::SetStyle depending on
the text direction, the flag is set by default and gets unset for the
vertical ruler, because the initial text direction is horizontal,
see SwView::StateTabWin.

Ruler::SetStyle calls Ruler::ImplInitExtraField, which modifies mnVirOff,
however mnVirWidth depends on mnVirOff, but gets updated only in Resize.

This patch copies the code from Resize to ImplInitExtraField, we cannot
just call Resize from ImplInitExtraField due to possible infinite recursion.

Change-Id: Ic7bb897059295aebe86c11977c37419017b55787